cmake_minimum_required(VERSION 3.5)

project(MaxDepthBST_104 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(MaxDepthBST_104 main.cpp)

install(TARGETS MaxDepthBST_104
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
