cmake_minimum_required(VERSION 3.5)

project(TwoSum2_167 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(TwoSum2_167 main.cpp)

install(TARGETS TwoSum2_167
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
